# yt-desktop-widget

./: .gitignore  AGENTS.md  ARCHITECTURE.md  DECISIONS.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.beads/: metadata.json
.github/: pull_request_template.md
.tools/: .gitignore  beads.ps1
project-tracking/: README.md  bootstrap-sync.md  time-log.md
project-tracking/archive/: beads-export-2026-07-05.jsonl  beads-migration-map.md
project-tracking/checklists/: 0000-definition-of-done.md
project-tracking/decisions/: 0000-use-markdown-project-tracking.md  0001-current-architecture-decisions.md  0002-adopt-branch-per-pass-commit-merge-push-workflow.md  0003-use-package-json-as-central-version-source.md  0004-use-uniform-widget-scaling-for-size-modes.md  0005-use-ordered-widget-blocks-and-explicit-visibility-modes.md  0006-separate-product-playback-source-from-development-source-mode.md  0007-run-windows-media-on-a-dedicated-mta-worker.md  0008-use-a-loopback-keyring-backed-cider-adapter.md  0009-rename-product-while-preserving-runtime-identifiers.md
project-tracking/reports/: 0003-fix-main-widget-close-button-honoring-the-configured-action-report.md  0004-keep-connection-state-and-authorization-cards-on-one-row-in-settings-report.md  0008-validate-live-companion-auth-realtime-commands-and-seek-against-a-real-y.md  0015-migrate-task-tracking-from-beads-to-markdown-project-tracking-report.md  0016-sync-bootstrap-rules-to-0002.md  0017-full-code-audit-latest-ytmdesktop.md  0018-fix-companion-auth-completion-flow.md  0019-fix-controller-auth-test-typescript-build.md  0020-fix-live-companion-auth-post-approval-stall.md  0021-full-code-audit-after-auth-fixes.md  0022-fix-live-companion-auth-still-stuck-after-allow.md  0028-fix-stored-token-reconnect-loop.md  (+33 more)
scripts/: run-e2e.ps1  sync-version.mjs
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: default.toml
src-tauri/src/: cider.rs  companion.rs  lib.rs  main.rs  models.rs  settings.rs  startup.rs  windows_media.rs
(+127 files in other folders)
