[package]
name = "ytm-desktop-widget"
version = "1.0.0"
description = "Premium Windows companion widget for YTMDesktop"
authors = ["Codex"]
edition = "2021"

[lib]
name = "ytm_desktop_widget_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
futures-util = "0.3.31"
keyring = "3.6.3"
reqwest = { version = "0.12.22", default-features = false, features = ["json", "rustls-tls"] }
rust_socketio = { version = "0.6.0", features = ["async"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tauri = { version = "2.8.5", features = ["tray-icon", "image-png"] }
tauri-plugin-mcp-bridge = "0.9"
tauri-plugin-opener = "2.5.0"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "sync", "time"] }
winreg = "0.55.0"
