[package]
name = "music-desktop-widget"
version = "3.1.0"
description = "Customizable Windows media widget for YTMDesktop Companion, Windows Media Session, and Cider"
authors = ["lgg"]
edition = "2021"

[lib]
name = "music_desktop_widget_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
base64 = "0.22.1"
futures-util = "0.3.31"
keyring = { version = "3.6.3", features = ["windows-native"] }
reqwest = { version = "0.12.22", default-features = false, features = ["json", "rustls-tls"] }
rust_socketio = { version = "0.6.0", features = ["async"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tauri = { version = "2.8.5", features = ["tray-icon", "image-png"] }
tauri-plugin-mcp-bridge = "0.9"
tauri-plugin-opener = "2.5.0"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "sync", "time"] }
winreg = "0.55.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61.3", features = ["Foundation", "Media_Control", "Storage_Streams", "Win32_System_WinRT"] }
windows-future = { version = "0.2.1", features = ["std"] }
